# oasis

./: .gitignore  README.md
backend/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  youtube_cookies.txt
backend/app/: api.py  config.py  database.py  main.py  proxy  redis_client.py
backend/app/core/: dependencies.py  email.py  encryption.py  exception_handlers.py  exceptions.py  security.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 54a0e9c1f791_add_users_table.py  629183bd656d_add_playlist_track_relations.py  836e5d94e2ee_add_is_verified_field_in_users_table.py  cc363acb599f_add_ext_password_encrypted_field_in_.py
backend/app/music/: api.py  dependencies.py  models.py  repositories.py  repository.py  schemas.py  service.py
backend/app/users/: api.py  dependencies.py  models.py  repository.py  schemas.py  service.py
backend/scripts/: docker.sh
mobile/oasis/: README.md  pubspec.yaml
mobile/oasis/android/: build.gradle.kts
mobile/oasis/android/app/: build.gradle.kts
mobile/oasis/ios/Runner.xcodeproj/: project.pbxproj
mobile/oasis/lib/: main.dart
mobile/oasis/lib/models/: auth_models.dart  gradient_theme.dart  gradient_theme.g.dart  playlist.dart  playlist.g.dart  track.dart  track.g.dart  user.dart
mobile/oasis/lib/providers/: auth_provider.dart  player_provider.dart  theme_provider.dart
mobile/oasis/lib/screens/: downloads_screen.dart  forgot_password_screen.dart  home_screen.dart  library_screen.dart  login_screen.dart  player_screen.dart  playlist_screen.dart  (+6 more)
mobile/oasis/web/: manifest.json
(+14 files in other folders)
