[project]
name = "oasis"
version = "0.1.0"
description = "Oasis is a progressive music streaming service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1,<3.0.0",
    "bcrypt>=4.3.0,<5.0.0",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.35.0",
]
